#2627: Solved invisible fonts issue, added manifest, enhanced accessibility

--- a/code/css/main.css
+++ b/code/css/main.css
@@ -135,7 +135,7 @@
 body {
   padding-top: 60px;
   background: #fff;
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: 'Roboto-regular';
   font-weight: 300;
   color: #454545;
   font-size: 1.4em !important;
@@ -149,7 +149,7 @@ h4,
 h5,
 h6 {
   font-weight: 600;
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: 'Roboto-regular';
   color: #272727;
   /* margin-left:20px; */
   margin-top: 20px;
@@ -174,8 +174,8 @@ h6 {
 
 @font-face {
   font-family: 'Roboto-regular';
-  src: local('Arial'), url('../fonts/Roboto-Regular.eot');
-  src: local('Arial'), url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Regular.eot');
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Roboto-Regular.woff') format('woff'),
     url('../fonts/Roboto-Regular.ttf') format('truetype'),
     url('../fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
@@ -186,8 +186,8 @@ h6 {
 
 @font-face {
   font-family: 'Roboto-light';
-  src: local('Arial'), url('../fonts/Roboto-Light.eot');
-  src: local('Arial'), url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Light.eot');
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Roboto-Light.woff') format('woff'),
     url('../fonts/Roboto-Light.ttf') format('truetype'),
     url('../fonts/Roboto-Light.svg#Roboto-Light') format('svg');
@@ -198,8 +198,8 @@ h6 {
 
 @font-face {
   font-family: 'Roboto-thin';
-  src: local('Arial'), url('../fonts/Roboto-Thin.eot');
-  src: local('Arial'), url('../fonts/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Thin.eot');
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Roboto-Thin.woff') format('woff'),
     url('../fonts/Roboto-Thin.ttf') format('truetype'),
     url('../fonts/Roboto-Thin.svg#Roboto-Thin') format('svg');
@@ -210,8 +210,8 @@ h6 {
 
 @font-face {
   font-family: 'Roboto-medium';
-  src: local('Arial'), url('../fonts/Roboto-Medium.eot');
-  src: local('Arial'), url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Medium.eot');
+  src: local('Arial'), local('Helvetica'), local('sans-serif'), url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Roboto-Medium.woff') format('woff'),
     url('../fonts/Roboto-Medium.ttf') format('truetype'),
     url('../fonts/Roboto-Medium.svg#Roboto-Medium') format('svg');
@@ -429,7 +429,7 @@ ul.nostyle i {
     color: white;
     padding-bottom: 20px;
     font-size: 16px;
-    font-family: 'Roboto-regular', sans-serif;
+    font-family: 'Roboto-regular';
     font-weight: normal;
   }
 
@@ -509,7 +509,7 @@ ul.nostyle i {
   font-size: 40px;
   line-height: 1;
   text-transform: capitalize;
-  font-family: 'Roboto-thin', sans-serif;
+  font-family: 'Roboto-thin';
   color: #fff;
   text-align: center;
 }
@@ -518,7 +518,7 @@ ul.nostyle i {
   margin-top: 20px;
   line-height: 25px;
   text-transform: capitalize;
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: 'Roboto-regular';
   color: #fff;
   text-align: center;
   text-align: left;
@@ -882,11 +882,11 @@ ul.nostyle i {
 }
 
 .p-free {
-  color: #636363;
+  color: #727272;
 }
 
 .p-enterprise {
-  color: #538300;
+  color: #466e00;
 }
 
 .p-buttons {
@@ -961,7 +961,7 @@ ul.nostyle i {
 #portfolio .portfolio-filter>li a {
   display: block;
   padding: 7px 15px;
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: 'Roboto-regular';
   color: #64686d;
   position: relative;
 }
@@ -1494,7 +1494,7 @@ ul.nostyle i {
 
 #get-in-touch .form-control {
   height: 40px;
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: 'Roboto-regular';
   color: #323232;
 }
 
